k8s/argo/deployment.yaml
# app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo-container
        image: megmegmeg/myapp
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: LoadBalancer  # Or ClusterIP if using Ingress only
  selector:
    app: todo
  ports:
  - port: 80
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Or your ingress controller
spec:
  rules:
  - host: app1.mark.online  # Replace with your domain or IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-service
            port:
              number: 80
